--- a/gui/informationscreens/PlayersScreen.kv
+++ b/gui/informationscreens/PlayersScreen.kv
@@ -5,7 +5,7 @@
         orientation: "vertical"
 
         MDToolbar:
-            title: f"[font=Icons]{md_icons['account']}[/font] Players"
+            title: "Players"
             left_action_items: [["menu", lambda x: app.root.get_screen("maininfo").ids.nav_drawer.set_state("open")]]
             right_action_items: [["close", lambda x: app.root.get_screen("maininfo").close()]]
 
