--- a/gui/informationscreens/ActionsScreen.kv
+++ b/gui/informationscreens/ActionsScreen.kv
@@ -5,7 +5,7 @@
         orientation: "vertical"
 
         MDToolbar:
-            title: f"[size=22sp][font=Icons]{md_icons['file-code']}[/font][/size] Actions"
+            title: "Actions"
             left_action_items: [["menu", lambda x: app.root.get_screen("maininfo").ids.nav_drawer.set_state("open")]]
             right_action_items: [["close", lambda x: app.root.get_screen("maininfo").close()]]
 
