--- a/gui/informationscreens/LoreScreen.kv
+++ b/gui/informationscreens/LoreScreen.kv
@@ -5,7 +5,7 @@
         orientation: "vertical"
 
         MDToolbar:
-            title: f"[font=Icons]{md_icons['book']}[/font] Lore"
+            title: "Lore"
             left_action_items: [["menu", lambda x: app.root.get_screen("maininfo").ids.nav_drawer.set_state("open")]]
             right_action_items: [["close", lambda x: app.root.get_screen("maininfo").close()]]
 
