--- a/gui/informationscreens/PointsScreen.kv
+++ b/gui/informationscreens/PointsScreen.kv
@@ -5,7 +5,7 @@
         orientation: "vertical"
 
         MDToolbar:
-            title: f"[font=Icons]{md_icons['numeric-9-plus-box']}[/font] Points"
+            title: "Points"
             left_action_items: [["menu", lambda x: app.root.get_screen("maininfo").ids.nav_drawer.set_state("open")]]
             right_action_items: [["close", lambda x: app.root.get_screen("maininfo").close()]]
 
